mule-user-guide/v/3.4/mule-expression-language-basic-syntax.adoc
=  Mule表达式语言基本语法

灵活的工具，您可以使用Mule表达式语言（MEL）来评估多种表达式，包括常量，简单操作数，具有多个值的操作或对象上的方法调用。您也可以使用MEL来执行正则表达式或xpath函数。因此，尽管语法是一致的，但您在Mule应用程序中编写或表达的表达式可能会采用许多不同的形式，具体取决于它们的用途。本文档旨在深入了解MEL的基本语法规则，以便您可以编写或解析MEL表达式的功能。

有关MEL语法的更多详细信息，请参阅完整的 link:/mule-user-guide/v/3.4/mule-expression-language-reference[Mule表达式语言参考]材料。

== 假设

本文假设您已阅读 link:/mule-user-guide/v/3.4/mule-expression-language-mel[Mule表达语言MEL]并研究了 link:/mule-user-guide/v/3.4/mule-message-structure[骡子消息结构]。

基本语法== 

实质上，您将MEL表达式与其他事物（如操作数和运算符）结合使用来动态返回值。 Mule在运行时评估表达式，MEL表达式所在的消息处理器使用结果来处理消息的有效载荷，属性或变量。例如，您可以使用表达式_inside_ Set Payload消息处理器从消息的inboundProperty中提取用户名，然后将其设置为有效内容。见下面的例子。

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....
image:example_set_payload.png[example_set_payload]
....
[tab,title="XML Editor or Standalone"]
....
[source, xml, linenums]
----
<sub-flow name="MEL_example" doc:name="MEL_example">
        <set-payload value="#[message.inboundProperties['username']]" doc:name="Set Payload"/>
    </sub-flow>
----
....
------

=== 定义

在深入语法规则之前有一些定义。

==== 表达

在Mule中，表达式是一个字符串，用**`#[ ]` **括起来。在运行时，Mule使用MEL（作为默认表达式计算器）来确定表达式的值。

MEL表达式遵循Java类语法。总体而言，基本运算符和操作数是常规和可预测的（例如，`2 + 2 == 4`返回`true`）。最简单的表达方式是提供对消息中信息的访问权限（例如，`message.id`）。以下部分中的{{3}提供了一些有关如何使用MEL表达式来访问信息，执行比较和调用方法的信息。

[NOTE]
====
请注意，MEL是**expression language**，而不是*programming language*。因此，Mule中的**{{0}} **：

* 始终解析为单个值
*  _ cannot_返回类型void
====

==== 上下文对象，变量和字段

术语*Context Object*构成MEL表达式最简单形式的第一部分;第二部分是**Field **（请参阅下图，左侧）。使用MEL表达式中的*Variable*来访问Mule消息中流量变量或会话变量中包含的信息。它本身是MEL中的顶级标识符，变量并不要求您在表达式中定义上下文对象（请参阅下图，右图）。

                                    image:contextob_field.png[contextob_field] image:flowVars2.png[flowVars2]

下表列出了可在Mule中使用的上下文对象和变量，以及可以与它们一起使用的相应字段。

[%header,cols="34,33,33"]
|===
|上下文对象 |描述 |字段
| *server*  |运行消息处理器的操作系统。 | dateTime +
env +
fileSeparator +
主机+
ip +
locale +
javaVersion +
javaVendor +
nanoSeconds +
osName +
osArch +
osVersion +
systemProperties +
timeZone +
tmpDir +
userName +
userHome +
USERDIR
| *mule*  |运行应用程序的Mule实例 | clusterId +
家+
nodeId +
版
| *application*  |部署当前流的用户应用程序 |编码+
名称+
独立+
workDir +
注册处
| *message*  |消息处理器正在处理的包（有效内容，附件，属性）。 | id +
rootId +
correlationId +
correlationSequence +
correlationGroupSize +
replyTo +
dataType +
有效载荷+
inboundProperties +
inboundAttachments +
outboundProperties +
outboundAttachments +
|===

[%header%autowidth.spread]
|===
|上下文对象 |描述 |字段
| *flowVars*  |在消息上设置的变量;流变量只保留在创建它们的流程中。 |不适用
| *sessionVars*  |在消息上设置的会话变量;会话变量在应用程序内的流之间持续存在。 |不适用
|===

[TIP]
作为捷径，Mule接受诸如`#[payload]`的表达式，而不是`#[message.payload]`，因为它知道自动评估消息上下文对象的表达式。此快捷方式仅适用于`payload`字段。


=== 基本语法规则

有关语法规则的完整列表，请参阅完整的 link:/mule-user-guide/v/3.4/mule-expression-language-reference[MEL参考]材料。 +

[%header,cols="34,33,33"]
|========
|   |示例 |说明
| **#[  ]**   | `#[message.id]`  |始终绑定表达式。
| *Simple expressions*  | `#[message.field]` +
`#[sessionVars['age']]`  |最简单的表达式类型，它们仅由一个contextObject和一个字段组成，或者仅仅是一个变量。提供从消息中获取信息的权限，包括有效载荷，属性和变量。
| *Operators*  | `#['Cookie' + flowVars.cookie]`  |在表达式中执行操作。可以是一元的，比较的，逻辑的，按位的，算术的等等。
| *Boolean expressions* a |
`#['foo'=='bar']`

`#[2 + 2 == 4]`

  |产生布尔值。
| *Bean Property Access*  | `#[payload.property1.property2]`  |从bean获取信息。
| *Method invocations*  | `#[message.header.get()]`  |调用方法，然后根据括号内指定的参数（如果有）在对象上执行该方法。方法调用始终遵循以下语法：`object.method()`
| *Assignments*  | `#[payload = 'sample']`  |评估分配一个值。左侧的示例会动态解析以将有效负载设置为`sample`。
| *Literals*  | `'expression'255 null`  |字符串，数字，布尔值，类型和空值。
| *xpath and regex*  | `xpath('/orders/order[0]')`
`regex('^(To FromCc):')`  | *Xpath*和*regex*提供提取尚未作为单个值存在的上下文信息的方法。
|========

此外，您可以使用表达式内联来创建列表，地图和数组。详细了解MEL表达式中的 link:/mule-user-guide/v/3.7/mule-expression-language-reference[访问地图，列表和数组]。

[%autowidth.spread]
|===
| *Inline list*  | `[item1, item2, . . .]`  |评估产生一个列表。
| *Inline map*  | `[key1 : value1, key2: value2, ...]`  |评估以生成地图。
| *Inline array*  |  `{item1, item2, . . .}`  |评估产生一个数组。
|===

== 示例

实际上，没有一个单一的_typical_ MEL表达式。** **也就是说，一些示例表达式可以帮助说明MEL表达式如何解析。如下面的示例表格所示，MEL表达式返回的值可以是数值，逻辑值（`true`或`false`），字符串或几乎任何数据类型。 MEL表达式也可以执行操作，调用方法和执行函数。查看完整的 link:/mule-user-guide/v/3.4/mule-expression-language-basic-syntax[语法参考]，探索所有可能性。访问完整的 link:/mule-user-guide/v/3.4/mule-expression-language-examples[例子]，演示如何在应用程序中使用MEL表达式。

[%header,cols="2*"]
|=====
| *Expression*  | *Description*
| `#[2 + 2]`  |该表达式的计算结果为4。
| `#[2 + 2 == 4]`  |该表达式使用运算符来执行比较。它的评估为真。
| `#[message]`  |该表达式引用MEL（`message`，`app`，`mule`和`server`）中的上下文对象。这个表达式的值是消息。
| `#[message.id]`  |该表达式访问与指定的上下文对象关联的特定字段。这个表达式的值是唯一的消息ID。
| `#[payload['name']]`  |该表达式访问与上下文对象（消息）关联的字段（有效内容）内的特定映射项目（使用键"name"）。该表达式的值是与变量“name”关联的值。
| `#[payload[4]]`  |与上面相同，但在这种情况下 - 提供的字段是列表 - 表达式返回列表中第5个项目的值。 （4代表第5个项目，因为列表中的第一个项目是0项目。）
| `#[message.header.get()]`  |该表达式调用"get"方法，并根据括号内指定的参数（如果有）在对象上执行该方法。
|=====

===  MEL自动完成

如果您正在配置支持表达式的字段并需要语法帮助，则可以通过以下两种方法之一访问MEL建议。

* 将光标置于**`#[]`**的字段中的括号内，然后按**Ctrl + Space Bar**。
* 输入`#[`打开一个新的MEL表达式并显示建议，如下所示。 +

+
image:auto_complete.png[auto_complete]

[WARNING]
请注意，此处描述的自动完成功能适用于*Visual Editor only*。尽管Studio的XML选项卡确实提供了一些自动完成选项，但Eclipse的建议受到限制，并且不基于DataSense或Mule表达式语言。

== 日期和时间函数

[TIP]
有关日期和时间函数的完整参考，请参阅 link:/mule-user-guide/v/3.4/mule-expression-language-date-and-time-functions[Mule表达语言日期和时间函数]。

* 在dateTime对象中返回系统日期和时间：
+

[source, code, linenums]
----
#[server.dateTime]
----

* 以整数形式返回当前系统时间（以纳秒为单位）：
+

[source, code, linenums]
----
#[server.nanoTime()]
----

* 用指定日历和服务器区域设置返回一个dateTime对象：
+

[source, code, linenums]
----
#[calendar = Calendar.getInstance();
message.payload = new org.mule.el.datetime.DateTime(calendar);]
----

* 将消息负载设置为服务器日期和时间的Java日历表示形式：
+

[source, code, linenums]
----
#[message.payload = server.dateTime.toCalendar()]
----

== 提示

* 作为捷径，Mule接受诸如`#[payload]`的表达式，而不是`#[message.payload]`，因为它知道自动评估消息上下文对象的表达式。此快捷方式仅适用于`payload`字段。 +

*  MEL在运行时执行 http://en.wikipedia.org/wiki/Type_coercion[类型强制]。 +

* 在Studio的XML编辑器中编写代码时，不能使用双引号来表示字符串，因为MEL表达式在配置文件中已用双引号引起来。相反，你可以：+
** 使用单引号（`'expression'`）
** 用“ （`&quot;expression&quot;`）
** 用\ u0027（`\u0027expression\u0027`转义引号）
+
如果您正在使用Studio的可视化编辑器编写，Studio会在XML视图中将双引号转换为转义引号` (&quot;`）。

{} * 虽然Mule表达式语言在Mule 3.3中是新的，但Mule从Mule 2.1开始支持表达式。在Mule 3.3之前， link:/mule-user-guide/v/3.4/using-non-mel-expressions[表达评估者]提供了此功能。 *evaluator*是一段代码，遵循一组规则和逻辑来提取表达式的值。每个表达式评估器都有自己的规则和语法。 Mule表达评估者继续得到Mule ESB的全力支持，但考虑到Mule表达语言的可用性，不再推荐使用它们。 +

== 另请参阅

* 访问完整的*{{0}}*，演示如何在应用程序中使用MEL表达式。
* 访问MEL的全套**{{0}}**。
* 使用MEL时，请访问**{{0}}**的完整列表。
